--- a/stylesheets/bsafes.css
+++ b/stylesheets/bsafes.css
@@ -402,6 +402,20 @@ body {
   z-index:1000;
 }
 
+.btnCanvasSave {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  color: #FFF;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5), 3px 3px 3px rgba(0, 0, 0, 0.25);
+  /*position: fixed;*/
+  display: inline-block;
+  cursor: default;
+  padding-top: 8px;
+  /*z-index:1000;*/
+  margin: 10px 10px 10px 10px;
+}
+
 .btnFloatingAdd {
 	padding-top:10px;
 	padding-left:15px;
