--- a/stylesheets/bsafes.css
+++ b/stylesheets/bsafes.css
@@ -435,6 +435,13 @@ body {
   padding-left:10px;
 }
 
+.btnFloatingCanvasSave {
+  background: #229954;
+  bottom: 50px;
+  right: 24px;
+  padding-left:10px;
+}
+
 .btnFloatingCancel {
   background: #F39C12;
   bottom: 12px;
