--- a/stylesheets/bsafes.css
+++ b/stylesheets/bsafes.css
@@ -876,7 +876,7 @@ body {
 /* End of comments */
 
 /*edi append*/
-.wrapper {
+#contentsWrapper {
   padding-left:10px;
   padding-right:10px;
 }
@@ -969,5 +969,15 @@ body {
 .mxPopupMenu , .geToolbarMenu {
   box-sizing:initial;
 }
+
+#contentsWrapper.fullscreen{
+    z-index: 99999; 
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    top: 0px; 
+    left: 10px; 
+    overflow: auto;
+ }
 
 /* End of page *******/
