--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -308,34 +308,55 @@ strong {
 
 .banner.jumbotron p {
     font-size: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .banner .banner-img {
-    -webkit-transform: translateY(65px);
-    transform: translateY(65px);
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
 }
 
 /*========== Get Started Style ==========*/
-.get-started {
+.problem {
     height: auto;
     width: 100%;
     background: #0a69de;
-    padding: 180px 0 150px 0;
+    padding: 60px 0 60px 0;
 }
 
-.get-started h2 {
+.problem h2 {
     font-size: 36px;
     font-weight: 700;
     line-height: 5rem;
     margin: 0 0 30px 0;
 }
 
-.get-started p {
+.problem p {
     font-size: 20px;
     font-weight: 300;
     margin-bottom: 20px;
 }
+
+/*========== Introduction Style ==========*/
+.introduction {
+    height: auto;
+    width: 100%;
+    background: #F8F9F9;
+    padding: 60px 0 60px 0;
+}
+
+.introduction h2 {
+    color: #000000;
+}
+
+.introduction p {
+    color: #000000;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0px 0px 20px 0px;
+}
+
+
 
 /*========== Create Style ==========*/
 .create {
@@ -449,47 +470,47 @@ strong {
 }
 
 /*========== Blog Style ==========*/
-.blog {
-    padding-bottom: 100px;
+.screen {
+    padding-bottom: 2px;
 }
 
-.blog h5 {
+.screen h5 {
     color: #000000;
     font-size: 20px;
     font-weight: 600;
     margin-top: 0;
 }
 
-.blog .line {
+.screen .line {
     height: 13px;
     display: block;
     border-bottom: 1px solid #000000;
     margin-right: 80px;
 }
 
-.blog .section-title {
+.screen .section-title {
     color: #000000;
     line-height: 55px;
     margin: 50px 0px 100px 0px;
 }
 
-.blog .single-blog {
+.screen .single-screen {
     margin-bottom: 50px;
 }
 
-.blog .single-blog p {
+.screen .single-screen p {
     color: #000000;
     font-size: 16px;
     margin: 15px 0px;
 }
 
-.blog .single-blog a {
+.screen .single-screen a {
     color: #0F6BFF;
     font-size: 16px;
     margin: 15px 0px;
 }
 
-.blog .single-blog a:hover {
+.screen .single-screen a:hover {
     color: #0F6BFF;
 }
 
